--- a/KNearestNeighbor/KNearestNeighbor/packages.config
+++ b/KNearestNeighbor/KNearestNeighbor/packages.config
@@ -2,4 +2,14 @@
 <packages>
   <package id="Accord" version="3.0.2" targetFramework="net452" />
   <package id="Accord.Math" version="3.0.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="NPOI" version="2.1.3.1" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
+  <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net452" />
 </packages>
