--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -149,20 +149,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KNearestNeighbor.cs" />
+    <Compile Include="ChartExtensions.cs" />
+    <Compile Include="CustomException.cs" />
+    <Compile Include="DataValidation.cs" />
+    <Compile Include="ErrorProviderExtensions.cs" />
+    <Compile Include="KNearestNeighborAlgorithm.cs" />
     <Compile Include="KNearestNeighborTest.cs" />
-    <Compile Include="KNNForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="KNNForm.Designer.cs">
-      <DependentUpon>KNNForm.cs</DependentUpon>
-    </Compile>
+    <Compile Include="NormalizeData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Wizard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,9 +176,6 @@
     <None Include="Properties\DataSources\KNearestNeighborTest.datasource" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="KNNForm.resx">
-      <DependentUpon>KNNForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
