Still unable to get the DGV (and the data source) to work. The temp DataRow object will hold all the right data but when it goes to add to the table.Row it will increment the count (for number of rows in the table) but keep the values for the row at null.
I even tried adding the number of rows required and then just editing those row values and it still didn't work. I'm at a loss right now.

Aside from displaying the training data, the data initialization step should be done unless I am forgetting something small here or there.

--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -176,6 +176,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\KNearestNeighborTest.datasource" />
+    <None Include="Properties\DataSources\Wizard.datasource" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
