Intialize data step is complete.
Parameterized the chart legend and rewriting the ChartExtensions method to correctly plot a dynamic number of points.

--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{881C99F1-AB47-4A44-B0FD-258FB783AA06}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KNearestNeighbor</RootNamespace>
     <AssemblyName>KNearestNeighbor</AssemblyName>
