--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -155,6 +155,12 @@
     <Compile Include="DataValidation.cs" />
     <Compile Include="ErrorProviderExtensions.cs" />
     <Compile Include="EuclideanDistance.cs" />
+    <Compile Include="HelpForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelpForm.Designer.cs">
+      <DependentUpon>HelpForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="KNearestNeighborAlgorithm.cs" />
     <Compile Include="KNearestNeighborTest.cs" />
     <Compile Include="NormalizeData.cs" />
@@ -179,6 +185,9 @@
     <None Include="Properties\DataSources\Wizard.datasource" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="HelpForm.resx">
+      <DependentUpon>HelpForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
