Fixed numerous logic errors with the KNN Algorithm. The algorithm works completely as intended now. Verified extensively.
Fixed and verified functionality for finding the nearest competitor based on two inputs.

--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -180,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="descriptionLeftPanelText.png" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\KNearestNeighborTest.datasource" />
     <None Include="Properties\DataSources\Wizard.datasource" />
