--- a/KNearestNeighbor/KNearestNeighbor/packages.config
+++ b/KNearestNeighbor/KNearestNeighbor/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Accord" version="3.0.2" targetFramework="net452" />
   <package id="Accord.Math" version="3.0.2" targetFramework="net452" />
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Fody" version="1.26.2-beta1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
