Changed the validation all around. Now the user has the ability to go back without actually needing the data to be validated. The only thing that will be validated are forward (next) operations.
I renamed my EuclideanDistance class to MathFunctions. I made my code more independent and inclusive by adding the required methods in the MathFunctions class (Max/Min/etc).

--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -157,8 +157,7 @@
     <Compile Include="CustomException.cs" />
     <Compile Include="DataValidation.cs" />
     <Compile Include="ErrorProviderExtensions.cs" />
-    <Compile Include="EuclideanDistance.cs" />
-    <Compile Include="HelperFunctions.cs" />
+    <Compile Include="MathFunctions.cs" />
     <Compile Include="HelpForm.cs">
       <SubType>Form</SubType>
     </Compile>
