Introduced a whole host of changes and bug fixes to the program.
-I swapped the order of the check boxes in the initial data step to reflect the proper tab ordering.
-I removed the ability for the user to edit the training data in the initialDataStep.
-I removed the ability for the instructions box to be tabbed to.
-I reset the dropdown text in the PlotX and PlotY comboboxes to be blank after the user enters the step.
-I reset the DGV and attribute list whenever someone attempts to browse a NEW file. In other words, if they add a NEW file (different from the previous one), then all of the fields are reset. If they attempt to enter a new file (which is identical to the previous one), then the fields are not reset.
-Fixed the situation when an invalid value was typed into the plot comboboxes. I made them dropdowns which doesn't allow user text.
-Fixed the issue where only one attribute was selected for a plot and the user attempted to plot.p I added validation checking for that case.
-Fixed the issue where decimal numbers weren't allowed as inputs for the attributes.
Fixed the issue with the plot method not handling the labels properly. I completely rewrote the class to be more concise and effective using key-value pairs.
-Added the closest competitor information relative to the attributes plotted by the user.
-Added the name of the particular point (trainingDataLabel) to each point on the graph.
-Made the displayDataStep3 the final step so it has the finish button now and also a "New" button that will restart the program at the initial screen. Alternatively, the user may just choose back and re-enter data. [Need extra QA on this].
-Fixed the issue where the images weren't being displayed properly. I changed the border of the program to reflect a re-sizable boreder but disallow resizing. So the images actually reach the edge of the viewable part of the program now.
-Changed the step instructions to be more informative for the user. It is more of a brief overview of th

--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -187,6 +187,10 @@
     <None Include="packages.config" />
     <None Include="Properties\DataSources\KNearestNeighborTest.datasource" />
     <None Include="Properties\DataSources\Wizard.datasource" />
+    <None Include="Resources\icon.ico" />
+    <None Include="openofficeorg_math_2ze_icon.ico" />
+    <None Include="orange-light-top.png" />
+    <None Include="orange-light-main-top.png" />
     <Content Include="Resources\knnHelp.CHM">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -197,8 +201,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Wizard.resx">
       <DependentUpon>Wizard.cs</DependentUpon>
