--- a/KNearestNeighbor/KNearestNeighbor/packages.config
+++ b/KNearestNeighbor/KNearestNeighbor/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="NPOI" version="2.1.3.1" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net452" />
 </packages>
