--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -174,6 +174,8 @@
     <Compile Include="ChartExtensions.cs" />
     <Compile Include="DataReader.cs" />
     <Compile Include="DataValidation.cs" />
+    <Compile Include="DataWriter.cs" />
+    <Compile Include="ErrorHandler.cs" />
     <Compile Include="ErrorProviderExtensions.cs" />
     <Compile Include="MathFunctions.cs" />
     <Compile Include="KNearestNeighborAlgorithm.cs" />
