Update the documentation and removed unused code.
TODO: Figure out why the validation is now broken. Probably should start from scratch and implement proper error validation using the rules I have already generated. Just need to find a proper implementation method.

--- a/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
+++ b/KNearestNeighbor/KNearestNeighbor/KNearestNeighbor.csproj
@@ -200,6 +200,7 @@
     <Content Include="knnHelp.chm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="ClassDiagram1.cd" />
     <None Include="KNearestNeighbor_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\KNearestNeighborTest.datasource" />
